@@ -1,4 +1,4 @@
-group 'aaa'
+group 'org.cmsfs'
 version '1.0-SNAPSHOT'
 
 task wrapper(type: Wrapper) {
@@ -7,13 +7,15 @@ task wrapper(type: Wrapper) {
 }
 
 apply plugin: 'scala'
+apply plugin: 'application'
+
+def scalaVersion = "2.12.1"
+def akkaVersion = "2.5.0"
 
 repositories {
     mavenCentral()
 }
 
-def scalaVersion = "2.12.1"
-def akkaVersion = "2.5.0"
 dependencies {
     compile group: 'org.scala-lang', name: 'scala-library', version: scalaVersion
     compile group: 'org.scala-lang', name: 'scala-reflect', version: scalaVersion
@@ -26,3 +28,15 @@ sourceSets {
     main.scala.srcDirs = ['src/main/scala']
     test.scala.srcDirs = ['src/test/scala']
 }
+
+tasks.withType(ScalaCompile) {
+//    scalaCompileOptions.useAnt = false
+//    scalaCompileOptions.with { force = true }
+//
+    configure(scalaCompileOptions.forkOptions) {
+        memoryMaximumSize = '1g'
+        jvmArgs = ['-XX:MaxPermSize=512m']
+    }
+}
+
+mainClassName = "org.cmsfs.StartupCmsfs.Main"
